# pytools-lithography

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MPD_Main.ipynb  README.md  complete_analysis.py  design_example.ipynb  graph.py  legacy_analysis_example.ipynb  legacy_example.ipynb  main.py  make.bat  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py  slechte foto iris
docs_source/: TestVernierDiff.gds  conf.py  examples.rst  index.rst  pytools_lithography.analysis.legacy.rst  pytools_lithography.analysis.rst  pytools_lithography.design.rst  temp300.gds
examples/: code_emma.ipynb  design_example.ipynb
examples/design/: gds_hello_world.py  gds_lidar_with_pads.py  gds_sample_mach_zehner_interferometer.py
src/pytools_lithography/: __about__.py  __init__.py  sem_analysis.py
src/pytools_lithography/analysis/: __init__.py  analysis.py  batch_processing.py  image_processing.py  sem_analysis.py
src/pytools_lithography/analysis/legacy/: ImageAnalyzer.py  ImageFunctions.py  __init__.py
src/pytools_lithography/design/: KlayoutDesigner.py  pya.py  routing.py  tekst.py
src/pytools_lithography/design/elektronics/: pads.py  routing.py
src/pytools_lithography/design/optics/: couplers.py  filters.py  routing.py  waveguides.py
src/pytools_lithography/design/templates/: Diamond_Marker.gds  temp300.gds
src/pytools_lithography/design/templates/optics/: tjeerd_heaters.gds
src/pytools_lithography/tests/: test_legacy_analysis.py
tests/: test_legacy_analysis.py  utils.py
