[project]
name = "pytools_lithography"
version = "0.1.2"
authors = [
    { name="Nynra", email="nynradev@pm.me" },
    { name="Emma Bajmat", email="unknown@unknown.com"},
]
description = "Some usefull functions for mask design and SEM image analysis."
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "scipy",
    "pytools_image_processing @git+https://git@github.com/Nynra/pytools-image-processing.git@0.1.1",
    "easyocr",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: MIT License",
]
license = {text = "MIT License"}

[project.urls]
Homepage = "https://github.com/Nynra/pytools_lithography"
Issues = "https://github.com/Nynra/pytools_lithography/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

